--- a/resume_builder/src/index.css
+++ b/resume_builder/src/index.css
@@ -3,6 +3,15 @@
 
 @custom-variant dark (&:is(.dark *));
 
+.rendered-html ul {
+  list-style-type: disc;
+  padding-left: 1rem; /* or 16px */
+}
+
+.rendered-html li {
+  margin-bottom: 0.25rem;
+}
+
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
